Update run config